--- a/public/landing.html
+++ b/public/landing.html
@@ -20,7 +20,7 @@
             <button id="find-btn">Find Company</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </span>
         <span>
-            <button id="employ-btn">Signup</button>
+            <button id="employ-btn">Login/button>
         </span>
     </div>
     <div>
@@ -34,7 +34,7 @@
         const signupButton = document.getElementById('employ-btn');
 
         signupButton.addEventListener('click', () => {
-            window.location.href = 'signup.html'; 
+            window.location.href = 'login.html'; 
         });
     </script>
 </body>
