--- a/public/landing.html
+++ b/public/landing.html
@@ -20,7 +20,7 @@
             <button id="find-btn">Find Company</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </span>
         <span>
-            <button id="employ-btn">Login/button>
+            <button id="employ-btn">Login</button>
         </span>
     </div>
     <div>
