--- a/public/signup.html
+++ b/public/signup.html
@@ -162,8 +162,11 @@
       <p id="logo">HireMe</p>
     </span>
     <span>
-      <button id="find-btn">Find Company</button>
+      <button id="find-btn">Find Company</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </span>
+    <span>
+            <button id="employ-btn">Login</button>
+        </span>
   </div>
   <div>
     <p id="login-title">Create Account</p>
