--- a/public/signup.html
+++ b/public/signup.html
@@ -162,7 +162,7 @@
       <p id="logo">HireMe</p>
     </span>
     <span>
-      <button id="find-btn">Find Company</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <button id="find-btn">Find Company</button>
     </span>
     <span>
             <button id="employ-btn">Login</button>
