--- a/public/landing.html
+++ b/public/landing.html
@@ -12,17 +12,15 @@
 </head>
 
 <body>
-    <div id="navbar">
-        <span>
-            <p id="logo">HireMe</p>
-        </span>
-        <span>
-            <button id="find-btn">Find Company</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        </span>
-        <span>
-            <button id="employ-btn">Login</button>
-        </span>
-    </div>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="landing.html">HireMe</a>
+        </div>
+        <div class="nav-buttons">
+            <button>Find Company</button>
+            <button id="employ-btn">Signup</button>
+        </div>
+    </nav>
     <div>
         <p id="title1">Discover the best jobs</p>
         <p id="title2">Browse thousands of job listings to work at startups and leading companies</p>
