--- a/public/postjob.html
+++ b/public/postjob.html
@@ -167,14 +167,14 @@
 </head>
 
 <body>
-    <div id="navbar">
-        <span>
-          <p id="logo">HireMe</p>
-        </span>
-        <span>
-          <button id="logout">Logout</button>
-        </span>
-      </div> <br><br>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="landing.html">HireMe</a>
+        </div>
+        <div class="nav-buttons">
+            <button id="logout">Logout</button>
+        </div>
+    </nav> <br><br>
     <h3 align="center">Post a job</h3>
     <table align="center">
         <form method="post" action="/postjob" id="job">
