--- a/public/jobdescription.html
+++ b/public/jobdescription.html
@@ -11,17 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="navbar">
-        <span>
-            <p id="logo">HireMe</p>
-        </span>
-        <span>
-            <button id="find-btn">Find a job</button>
-        </span>
-        <span>
-            <button id="employ-btn">Employers</button>
-        </span>
-    </div>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="landing.html">HireMe</a>
+        </div>
+        <div class="nav-buttons">
+            <button id="login">Login</button>
+            <button id="signup">Signup</button>
+        </div>
+    </nav>
 
     <div id="description">
 
@@ -113,6 +111,16 @@
             }
         });
     });
+    const signupButton = document.getElementById('login');
+
+        signupButton.addEventListener('click', () => {
+            window.location.href = 'login.html'; 
+        });
+        const loginButton = document.getElementById('signup');
+
+         loginButton.addEventListener('click', () => {
+    window.location.href = 'signup.html'; 
+});
 </script>
 </body>
 </html>
