--- a/public/landing.html
+++ b/public/landing.html
@@ -18,7 +18,7 @@
         </div>
         <div class="nav-buttons">
             <button>Find Company</button>
-            <button id="employ-btn">Signup</button>
+            <button id="employ-btn">Login</button>
         </div>
     </nav>
     <div>
