--- a/public/homepage.html
+++ b/public/homepage.html
@@ -22,136 +22,7 @@
                     type="button" class="btn btn-primary" id="employ-btn">Login</button> </form>
         </div>
     </nav>
-    <section class="row mt-5">
-        <div class="col">
-            <h2 class="text-dark" style="margin-left: 87px;">Jobs</h2>
-            <form class="d-flex">
-                <div class="input-group" style="margin-left: 80px;"> <input type="text" class="form-control mx-2 "
-                        placeholder="e.g. Job title, company, skills"> <select class="form-select mx-4 w-auto"
-                        id="inputGroupSelect01" style="padding-left: 10px;">
-                        <option selected>All categories</option>
-                        <option value="1">Data</option>
-                        <option value="2">Design</option>
-                        <option value="3">Customer Service</option>
-                        <option value="4">Finance</option>
-                        <option value="5">Legal</option>
-                        <option value="6">Marketing</option>
-                        <option value="8">Admin and Assistants</option>
-                        <option value="9">Operations</option>
-                        <option value="10">Blockchain and Crypto</option>
-                        <option value="11">Software Development</option>
-                    </select>
-                    <div class="input-group-append"> <button type="submit" class="btn btn-primary w-20">Search</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </section>
-    <div class="container shadow ">
-        <div class="row mt-5" style="max-width: 1200px;max-height: 92px;">
-            <div class="col-md-1"><img src="download.jpeg" class="img-fluid"
-                    style="max-height: 55px; max-width: 55px; border-radius: 6px;"></div>
-            <div class="col-md-3 d-flex align-items-center " style="white-space: nowrap;">Senior Data Analyst<br>dbt
-                Labs</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">DATA DRIVEN</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">STATISTICS</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">BUSINESS ACUMEN</div>
-            <div class="col-md-2 d-flex align-items-center justify-content-end"> <button type="submit"
-                    class="btn btn-primary"
-                    style="border-radius: 6px; background: #644EF9; max-height: 48px; width: 161px;">5L-8L</button>
-            </div>
-        </div>
-    </div>
-    <div class="container shadow">
-        <div class="row mt-5" style="max-width: 1200px;max-height: 92px;">
-            <div class="col-md-1"><img src="download.jpeg" class="img-fluid"
-                    style="max-height: 55px; max-width: 55px; border-radius: 6px;"></div>
-            <div class="col-md-3 d-flex align-items-center " style="white-space: nowrap;">Senior Software Engineer I<br>
-                dbt Labs</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">EQUITY</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">SCHEDULING</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">SCALABILITY</div>
-            <div class="col-md-2 d-flex align-items-center justify-content-end"> <button type="submit"
-                    class="btn btn-primary"
-                    style="border-radius: 6px; background: #644EF9; max-height: 48px; width: 161px;">5L-8L</button>
-            </div>
-        </div>
-    </div>
-    <div class="container shadow">
-        <div class="row mt-5" style="max-width: 1200px;max-height: 92px;">
-            <div class="col-md-1"><img src="download.jpeg" class="img-fluid"
-                    style="max-height: 55px; max-width: 55px; border-radius: 6px;"></div>
-            <div class="col-md-3 d-flex align-items-center " style="white-space: nowrap;">Senior Software Engineer
-                II<br> dbt Labs</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">HUBSPOT</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">EQUITY</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">PACKAGING</div>
-            <div class="col-md-2 d-flex align-items-center justify-content-end">
-                <button type="submit" class="btn btn-primary"
-                    style="border-radius: 6px; background: #644EF9; max-height: 48px; width: 161px;">5L-8L</button>
-            </div>
-        </div>
-    </div>
-    <div class="container shadow">
-        <div class="row mt-5" style="max-width: 1200px;max-height: 92px;">
-            <div class="col-md-1"><img src="download.jpeg" class="img-fluid"
-                    style="max-height: 55px; max-width: 55px; border-radius: 6px;"></div>
-            <div class="col-md-3 d-flex align-items-center " style="white-space: nowrap;">Technical Account Manager
-                Central<br>Wiz</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">CUSTOMER FACING ROLES</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">PROFESSIONAL SERVICES</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">KUBERNETES</div>
-            <div class="col-md-2 d-flex align-items-center justify-content-end"> <button type="submit"
-                    class="btn btn-primary"
-                    style="border-radius: 6px; background: #644EF9; max-height: 48px; width: 161px;">5L-8L</button>
-            </div>
-        </div>
-    </div>
-    <div class="container shadow">
-        <div class="row mt-5" style="max-width: 1200px;max-height: 92px;">
-            <div class="col-md-1"><img src="download.jpeg" class="img-fluid"
-                    style="max-height: 55px; max-width: 55px; border-radius: 6px;"></div>
-            <div class="col-md-3 d-flex align-items-center " style="white-space: nowrap;">Solution
-                Architect,Enterprise<br>dbt Labs</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">EQUITY</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">DATABASE ARCH</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">ANALYTICS</div>
-            <div class="col-md-2 d-flex align-items-center justify-content-end"> <button type="submit"
-                    class="btn btn-primary"
-                    style="border-radius: 6px; background: #644EF9; max-height: 48px; width: 161px;">5L-8L</button>
-            </div>
-        </div>
-    </div>
-    <div class="container shadow">
-        <div class="row mt-5" style="max-width: 1200px;max-height: 92px;">
-            <div class="col-md-1"><img src="download.jpeg" class="img-fluid"
-                    style="max-height: 55px; max-width: 55px; border-radius: 6px;"></div>
-            <div class="col-md-3 d-flex align-items-center " style="white-space: nowrap;">Director,Financial
-                Accounting<br>Instacart</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">ATTENTION TO DETAIL</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">SEC REPORTING</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">SEC</div>
-            <div class="col-md-2 d-flex align-items-center justify-content-end"> <button type="submit"
-                    class="btn btn-primary"
-                    style="border-radius: 6px; background: #644EF9; max-height: 48px; width: 161px;">5L-8L</button>
-            </div>
-        </div>
-    </div>
-    <div class="container shadow">
-        <div class="row mt-5" style="max-width: 1200px;max-height: 92px;">
-            <div class="col-md-1"><img src="download.jpeg" class="img-fluid"
-                    style="max-height: 55px; max-width: 55px; border-radius: 6px;"></div>
-            <div class="col-md-3 d-flex align-items-center " style="white-space: nowrap;">Staff iOS Engineer
-                Platform<br>Faire Wholesale</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">EQUITY</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">APP STORE</div>
-            <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">MOBILE</div>
-            <div class="col-md-2 d-flex align-items-center justify-content-end"> <button type="submit"
-                    class="btn btn-primary"
-                    style="border-radius: 6px; background: #644EF9; max-height: 48px; width: 161px;">5L-8L</button>
-            </div>
-        </div>
-    </div>
+    <div id="job-container"></div>
 </body>
 <script>
     const signupButton = document.getElementById('employ-btn');
@@ -159,6 +30,47 @@
 signupButton.addEventListener('click', () => {
     window.location.href = 'login.html'; 
 });
+ 
+ function fetchJobData() {
+    fetch('/jobs')
+      .then(response => response.json())
+      .then(data => {
+        const jobContainer = document.getElementById('job-container');
+        jobContainer.innerHTML = '';
+
+        data.forEach(job => {
+          const jobCard = createJobCard(job);
+          jobContainer.appendChild(jobCard);
+        });
+      })
+      .catch(error => {
+        console.error('Error fetching job data:', error);
+      });
+  }
+
+
+  function createJobCard(job) {
+  const card = document.createElement('div');
+  card.classList.add('container', 'shadow', 'mt-5');
+
+  card.innerHTML = `
+    <div class="row" style="max-width: 1200px;max-height: 92px;">
+      <div class="col-md-1"><img src="download.jpeg" class="img-fluid" style="max-height: 55px; max-width: 55px; border-radius: 6px;"></div>
+      <div class="col-md-3 d-flex align-items-center " style="white-space: nowrap;">${job.position}<br>${job.cname}</div>
+      <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">${job.tags}</div>
+      <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">${job.location}</div>
+      <div class="col-md-2 d-flex align-items-center " style="white-space: nowrap;">${job.min} - ${job.max}</div>
+      <div class="col-md-2 d-flex align-items-center justify-content-end">
+        <a href="${job.url}" target="_blank" class="btn btn-primary" style="border-radius: 6px; background: #644EF9; max-height: 48px; width: 161px;">Apply</a>
+      </div>
+    </div>
+  `;
+
+  return card;
+}
+
+ 
+  window.onload = fetchJobData;
 </script>
 
 </html>
